--- a/voyager/gamer/moon-voyager-gamer-r2-1.html
+++ b/voyager/gamer/moon-voyager-gamer-r2-1.html
@@ -1,11 +1,17 @@
 <!doctype html>
 <html lang=en >
 <head>
-<title>Moon Voyager Altitude R1</title>
+<title>Moon Voyager Gamer R2.1</title>
 <meta charset=utf-8 />
 <meta name=viewport content='width=device-width,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0' />
 </head>
 <body>
+<!--
+<script src=http://mrdoob.github.io/three.js/build/three.min.js ></script>
+<script src=http://mrdoob.github.io/three.js/examples/js/controls/OrbitControls.js ></script>
+<script src=http://mrdoob.github.io/three.js/examples/js/libs/stats.min.js ></script>
+-->
+
 <script src = http://rawgit.com/mrdoob/three.js/dev/build/three.js ></script>
 <script src = http://rawgit.com/mrdoob/three.js/dev/examples/js/controls/OrbitControls.js ></script>
 <script src = http://rawgit.com/mrdoob/three.js/dev/examples/js/libs/stats.min.js ></script>
@@ -20,14 +26,11 @@
 
 	var moonRadiusEquator = 1728;
 
-//	var width = 1440;
-//	var height = 720;
-
-	var width = 720;
-	var height = 360;
+	var width = 1440;
+	var height = 720;
 
 	var scale = 1;
-	var scaleAdjust = 0.0008;
+	var scaleAdjust = 0.0003;
 	var scl = scaleAdjust * scale;
 
 //	var selectedPlace = 1753;  // Copernicus 9000
@@ -74,13 +77,14 @@
 			'opacity: 0.8; overflow: auto; padding: 0 10px; position: absolute; top: 0px; transition: left 1s; max-width: 200px; ';
 		menu.innerHTML = '<h3>' +
 				'<a href="" >' + document.title + '</a> ' +
-				'<a id=i href=http://jaanga.github.io/moon/voyager/altitude/ >&#x24D8;</a>' +
+				'<a id=i href=http://jaanga.github.io/moon/voyager/gamer/ >&#x24D8;</a>' +
 			'</h3>' +
 			'<p><select id=selPlace></select></p>' +
 			'<p id=message ></p>' +
 			'<p>Vertical Scale <input type=range id=inpScale min=0 max=2 step=0.05 value=1 onchange=scale=this.value;scl=scale*scaleAdjust;updateTerrain(); /></p>' +
 			'<p><input type=checkbox id=chkPlacards onchange=togglePlacards(); checked /> Display placards</p>' +
 			'<p><input type=checkbox id=inpHelpers onchange=toggleHelpers(); checked /> Display axis</p>' +
+			'<p><input type=checkbox id=chkGradient onchange=toggleGradientBackground(); checked /> Display gradient</p>' +
 			'<p><input type=checkbox id=chkRotate checked /> Auto Rotation</p>' +
 		'';
 
@@ -88,15 +92,12 @@
 		stats.domElement.style.cssText = 'position: absolute; right: 0; top: 0; z-index: 100; ';
 		document.body.appendChild( stats.domElement );
 
-//		renderer = new THREE.WebGLRenderer( { alpha: 1, antialias: true, clearColor: 0xffffff }  );
-		renderer = new THREE.WebGLRenderer( { antialias: true }  );
-
+		renderer = new THREE.WebGLRenderer( { alpha: 1, antialias: true, clearColor: 0xffffff }  );
 		renderer.setSize( window.innerWidth, window.innerHeight );
-		renderer.shadowMap.enabled = true;
 		document.body.appendChild( renderer.domElement );
 
 		camera = new THREE.PerspectiveCamera( 40, window.innerWidth / window.innerHeight, 1, 10000 );
-		camera.position.set( 3500, 3500, -3500 );
+		camera.position.set( -3500, 3500, 3500 );
 
 		controls = new THREE.OrbitControls( camera, renderer.domElement );
 		controls.minDistance = 2500;
@@ -104,39 +105,6 @@
 		scene = new THREE.Scene();
 
 		controls.autoRotateSpeed = autoRotateSpeed;
-
-// Lights
-		light = new THREE.AmbientLight( 0xaaaaaa );
-		scene.add( light );
-
-		light = new THREE.DirectionalLight( 0xffffff, 0.5 );
-		light.position.set( 5000, 200, 5000 );
-
-		var d = 2000;
-		light.shadowCameraLeft = -d;
-		light.shadowCameraRight = d;
-		light.shadowCameraTop = d;
-		light.shadowCameraBottom = -d;
-
-		light.shadowCameraNear = 200;
-		light.shadowCameraFar = 500;
-
-// can help stop appearance of gridlines in objects with opacity < 1
-		light.shadowBias = -0.0002; // default 0 ~ distance fron corners?
-		light.shadowDarkness = 0.3; // default 0.5
-		light.shadowMapWidth = 2048;  // default 512
-		light.shadowMapHeight = 2048;
-
-		light.castShadow = true;
-//		light.shadowCameraVisible = true;
-		scene.add( light );
-
-		lightPoint = new THREE.PointLight( 0x888888, 0.25 );
-		camera.add( lightPoint );
-		lightPoint.position = new THREE.Vector3( 0, 0 , 1 );
-
-//		cameraHelper = new THREE.CameraHelper( light.shadow )
-//		scene.add( cameraHelper );
 
 		window.addEventListener( 'resize', onWindowResize, false );
 		renderer.domElement.addEventListener( 'mousemove', onMouseMove, false ); // or mousedown?
@@ -157,19 +125,43 @@
 		canvasHeightMap.height = height;
 		contextHeightMap = canvasHeightMap.getContext( '2d' );
 
-		geometry = new THREE.SphereGeometry( moonRadiusEquator, width - 1, height - 1 );
+		geometry = new THREE.SphereBufferGeometry( moonRadiusEquator, width - 1, height - 1 );
 		geometry.applyMatrix( new THREE.Matrix4().makeRotationY( Math.PI ) );
 
-//		material3D = new THREE.MeshBasicMaterial();
-//		heightMesh = new THREE.Mesh( geometry, material3D );
-//		heightMesh.castShadow = true;
-//		heightMesh.receiveShadow = true;
-//		scene.add( heightMesh );
+		material3D = new THREE.MeshNormalMaterial();
+
+		heightMesh = new THREE.Mesh( geometry, material3D );
+		scene.add( heightMesh );
 
 		placards = new THREE.Object3D();
 		scene.add( placards );
 
 		getGazetteerMoon();
+
+		toggleGradientBackground();
+
+	}
+
+	function updateTerrain() {
+
+		contextHeightMap.drawImage( heightMap, 0, 0, heightMap.width, heightMap.height, 0, 0, width, height );
+
+		map = contextHeightMap.getImageData( 0, 0, width, height ).data;
+
+		heightMesh.geometry = geometry.clone();
+		vertices = heightMesh.geometry.attributes.position.array;
+
+		for ( var i = 0, j = 0; i < vertices.length; j += 4 ) {
+
+			var s = 1 + scl * map[ j ];
+			vertices[ i++ ] *= s;
+			vertices[ i++ ] *= s;
+			vertices[ i++ ] *= s;
+
+		}
+
+		heightMesh.geometry.computeFaceNormals();
+		heightMesh.geometry.computeVertexNormals();
 
 	}
 
@@ -207,9 +199,9 @@
 
 				gazetteer.push( [ place[0], place[ 1 ], parseFloat( lat ), parseFloat( - lon ) ] );
 
-				pos = convertPosition( lat, - lon, placardYPosition )
+				pos = convertPosition( lat, lon, placardYPosition )
 
-				drawSprite( place[ 0 ], placardSize, 60, pos.x, pos.y, pos.z );
+				drawSprite( place[ 0 ], placardSize, 120, pos.x, pos.y, pos.z );
 
 			}
 
@@ -245,61 +237,12 @@
 
 	}
 
-	function updateTerrain() {
 
-		contextHeightMap.drawImage( heightMap, 0, 0, heightMap.width, heightMap.height, 0, 0, width, height );
-
-		map = contextHeightMap.getImageData( 0, 0, width, height ).data;
-
-		vertices = geometry.vertices;
-
-		for ( var i = 0, j = 0; i < vertices.length; i++, j += 4 ) {
-
-			var s = 1 + scl * map[ j ];
-			vertices[ i ].x *= s;
-			vertices[ i ].y *= s;
-			vertices[ i ].z *= s;
-
-			color = new THREE.Color();
-			color.setHSL( 0.7 * ( 255 - map[ j ] ) / 255, 1, 0.5 );
-			geometry.colors[i] = color; // use this array for convenience
-
-		}
-
-		for ( var i = 0; i < geometry.faces.length; i++ ) {
-
-			face = geometry.faces[ i ];
-			face.vertexColors[ 0 ] = geometry.colors[ face[ 'a'] ];
-			face.vertexColors[ 1 ] = geometry.colors[ face[ 'b'] ];
-			face.vertexColors[ 2 ] = geometry.colors[ face[ 'c'] ];
-
-		}
-
-		material = new THREE.MeshPhongMaterial( { vertexColors: THREE.VertexColors,
-
-			color: 0x888888,
-			emissive: 0x111111,
-			specular: 0x444444,
-			shininess: 30
-
-		} );
-//			material = new THREE.MeshNormalMaterial( { shading: THREE.SmoothShading, side: 2 } );
-
-		scene.remove( heightMesh );
-		heightMesh = new THREE.Mesh( geometry, material );
-		heightMesh.castShadow = true;
-		heightMesh.receiveShadow = true;
-			heightMesh.geometry.computeFaceNormals();
-			heightMesh.geometry.computeVertexNormals();
-//			heightMesh.material.needsUpdate = true;
-		scene.add( heightMesh );
-
-	}
 
 	function convertPosition( lat, lon, radius ) {
 
 		var rc = radius * Math.cos( lat * d2r );
-		return v( rc * Math.cos( lon * d2r ), radius * Math.sin( lat * d2r ), rc * Math.sin( lon * d2r) );
+		return v( rc * - Math.cos( lon * d2r ), radius * Math.sin( lat * d2r ), rc * Math.sin( lon * d2r) );
 
 	}
 
@@ -394,6 +337,28 @@
 		} else {
 
 			scene.remove( axis );
+
+		}
+
+	}
+
+	function toggleGradientBackground() {
+
+		if ( chkGradient.checked ) {
+
+			document.body.style.cssText += ' height: ' + window.innerHeight + 'px; ';
+
+			var col1 = Math.random().toString(16).slice(2, 8);
+			var col2 = Math.random().toString(16).slice(2, 8);
+			var col3 = Math.random().toString(16).slice(2, 8);
+			var x = ( Math.random() * window.innerWidth ).toFixed(0);
+			var y = ( Math.random() * window.innerHeight ).toFixed(0);
+
+			document.body.style.backgroundImage = 'radial-gradient( circle farthest-corner at ' + x + 'px ' + y + 'px, #' + col1 + ' 0%, #' + col2 + ' 50%, #' + col3 + ' 100%)';
+
+		} else {
+
+			document.body.style.backgroundImage = '';
 
 		}
 
