--- a/voyager/shaded/dev/index.html
+++ b/voyager/shaded/dev/index.html
@@ -7,7 +7,7 @@
 <body>
 <script>
 
-	window.location.href = '../moon-voyager-shaded-r1.html' + location.hash;
+	window.location.href = '../moon-voyager-shaded-r1-1.html' + location.hash;
 
 </script>
 </body>
