--- a/utilities/img-viewer-2d-moon.html
+++ b/utilities/img-viewer-2d-moon.html
@@ -7,6 +7,10 @@
 </head>
 <body>
 <script>
+
+	var path = 'c:/temp/moon-heightmaps/'; // for developing etc
+//	var path = 'http://jaanga.github.io/';
+
 	var info, stats, renderer, scene, camera, controls;
 	var geometry, material, mesh;
 
@@ -20,14 +24,13 @@
 //	var fileName = 	'C:/temp/WAC_GLD100_E000N1800_004P.IMG';
 //	var fileName = 	'C:/temp/WAC_GLD100_E000N1800_008P.IMG';
 
-
 //	var width = 1440; // 4P
 //	var height = 720;
 
 //	var width = 1440 * 4;
 //	var height = 720 * 4;
 
-	var fileName = 	'C:/temp/moon-heightmaps/WAC_GLD100_E000N1800_016P.IMG';
+	var fileName = path + 'WAC_GLD100_E000N1800_064P.IMG';
 	var width = 5760;
 	var height = 2880;
 
