--- a/utilities/read-png-composite-r1.html
+++ b/utilities/read-png-composite-r1.html
@@ -10,8 +10,8 @@
 // source http://wms.lroc.asu.edu/lroc/view_rdr/WAC_GLD100
 
 
-	var path = 'c:/temp/moon-heightmaps/zz-'; // for developing etc
-//	var path = 'http://jaanga.github.io/';
+//	var path = 'c:/temp/moon-heightmaps/'; // for developing etc
+	var path = 'http://jaanga.github.io/';
 
 	var dirNE = 'moon-heightmaps-256p-ne/';
 	var dirNW = 'moon-heightmaps-256p-nw/';
